# Eop_framework

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cfg/: calib_BuildEopEta_firstloop.cfg  calib_FinalizeCalibration.cfg  calib_FinalizeCalibrationEB.cfg  calib_FinalizeCalibrationEE.cfg  calib_UpdateIC_firstloop.cfg  calib_after1loop.cfg  local_test_calorimeter.cfg  monitoring_template.cfg  monitoring_test1.cfg  monitoring_test1_withIC.cfg  monitoring_test2_withIC.cfg  monitoring_test_fitscale.cfg  template.cfg  templateEEM.cfg  templateEEP.cfg  template_calibration.cfg  test_calorimeter.cfg
data/: CalibrationMomentumEB_ULRereco2016.root  EBmomentumcorrection_calibration2017_runBCDEF_ULrereco_harnesstag.root  EEmomentumcorrection_calibration2017_runBCDEF_ULrereco_harnesstag.root  existingEE.root  runranges2018.root  test_inputIC.root  test_momentum_correction.root
interface/: CMS_lumi.h  CMakeLists.txt  CalibrationUtils.h  CfgManager.h  CfgManagerT.h  DrawingUtils.h  ECALELFInterface.h  EEcalorimeter.h  FitUtils.h  ICmanager.h  LinkDef.h  MonitoringManager.h  ParticleNames.h  Plotter.h  RooFitUtils.h  TBetterChain.h  TEndcapRings.h  TimeBin.h  calibrator.h  calibratorEB.h  calibratorEE.h  calorimeter.h  crystal.h  histoFunc.h  utils.h
macros/: BuildLumiGraph.C  CompareBuildEopEta.C  ICratio.C  SplitEventsByLumi.C
main/: BuildEopEta.cpp  BuildEopEta_EB.cpp  BuildEopEta_EE.cpp  CMakeLists.txt  CalibrationMomentum.cpp  CalibrationPlots.cpp  ComputeIC.cpp  ComputeIC_EB.cpp  ComputeIC_EE.cpp  LaserMonitoring.cpp  NormalizeBuildEopEta.cpp  UpdateIC.cpp  drawComparisonPlots.cpp  test_calorimeter.cpp  validate_indexing.cpp
main/backup/: BuildEopEta_EB.cpp  ComputeIC_EB.cpp  ComputeIC_EE.cpp
python/: calibration.py  calibration_forEEvalidation.py  findFiles.py  harness_corrections.py  harness_definition.py  harness_monitoring.py  resubmit_jobs.py  splitGeant4JobsOnLxplus.py
scripts/: cmake_build.sh  rm_unmerged.sh  run_calibration_sequentially.sh  setup.sh  temporary_setup.sh
src/: CMS_lumi.cc  CalibrationUtils.cc  CfgManager.cc  DrawingUtils.cc  ECALELFInterface.cc  EEcalorimeter.cc  ICmanager.cc  MonitoringManager.cc  ParticleNames.cc  Plotter.cc  RooFitUtils.cc  SetTDRStyle.cc  TBetterChain.cc  TEndcapRings.cc  TimeBin.cc  calibrator.cc  calibratorEB.cc  calibratorEE.cc  calorimeter.cc
